ヘルパークラス分離によるリファクタリングを実施
MainWindowの肥大化を防ぐため、カメラ設定・共分散生成・2D投影描画のロジックをHelpers配下のCameraHelper/CovarianceGenerator/ProjectionRendererに分離。MainWindowはこれらヘルパーの呼び出しに簡素化し、責務分離と保守性・再利用性を向上。新規クラスをcsprojに追加。

--- a/MultiDimensionwScatter/MultiDimensionwScatter.csproj
+++ b/MultiDimensionwScatter/MultiDimensionwScatter.csproj
@@ -115,6 +115,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\CameraHelper.cs" />
+    <Compile Include="Helpers\CovarianceGenerator.cs" />
+    <Compile Include="Helpers\ProjectionRenderer.cs" />
     <Compile Include="Models\ComponentParam.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
