ソリューションパスをルート直下に修正
NuGet復元およびビルド時のソリューションファイルのパスを MultiDimensionwScatter/MultiDimensionwScatter.sln から MultiDimensionwScatter.sln に変更し、ルートディレクトリ直下のファイルを対象とするよう修正しました。また、アーティファクトアップロードのインデントも調整しました。

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,18 +15,18 @@ jobs:
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v2
 
-      - name: Restore NuGet packages
-        run: nuget restore MultiDimensionwScatter/MultiDimensionwScatter.sln
+      - name: Restore NuGet packages (Solution)
+        run: nuget restore MultiDimensionwScatter.sln
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
 
       - name: Build solution (Release)
-        run: msbuild MultiDimensionwScatter/MultiDimensionwScatter.sln /t:Build /p:Configuration=Release /p:Platform="Any CPU"
+        run: msbuild MultiDimensionwScatter.sln /t:Build /p:Configuration=Release /p:Platform="Any CPU"
 
       - name: Archive build artifacts
         uses: actions/upload-artifact@v4
         with:
-            name: Release-Binaries
-            path: |
-              MultiDimensionwScatter/**/bin/Release/
+          name: Release-Binaries
+          path: |
+            MultiDimensionwScatter/**/bin/Release/
